--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,8 +7,15 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <form (submit)="signIn()" [formGroup]="form">
+    <ion-item>
+      <ion-label>Email</ion-label>
+      <ion-input type="email" formControlName="email" placeholder="email"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Password</ion-label>
+      <ion-input type="password" formControlName="password" placeholder="password"></ion-input>
+    </ion-item>
+    <button ion-button block>{{ auth?.authenticating ? 'Signing in...' : 'Sign In' }}</button>
+  </form>
 </ion-content>
