Added more states and reducers

--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -15,6 +15,6 @@
 
 <ion-content padding>
   <h1>You are authenticated!</h1>
-
-  <button ion-button block>Sign Out</button>
+  
+  <button ion-button block (tap)="logout()">Sign Out</button>
 </ion-content>
